--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
            </td>
            <td>
               <table>
-            <tr><td> DRIVING</td>
+            <tr><td>SPORTS</td>
            <td>⭐⭐⭐</td>
          </tr>
          <tr>
